data/derived/sp14/progs/unify/prog4435.ml.out
Characters 77-80:
  (m-1.0, (mulByDigit (x*(int_of_float(m**10.0))) l2)::n) in
     ^^^
Error: This expression has type float but an expression was expected of type
         int
